Contrast Fix for text and npm updates

--- a/src/layouts/home.sass
+++ b/src/layouts/home.sass
@@ -73,9 +73,9 @@
           padding: 20px 
           cursor: pointer 
         .on
-          color: #04313361
+          color: $textDarkFaded
         .off
-          color: #0431332e
+          color: $textDarkBold
         @media all and (max-width: 560px)
           display: none
              
